force-app/main/default/objects/Account/fields/Additional_observations_info__c.field-meta.xml
<CustomField>
    <fullName>Additional_observations_info__c</fullName>
    <description>This is for MC to capture Additional observations/ info</description>
    <label>Additional observations/ info</label>
    <type>TextArea</type>
</CustomField>