force-app/main/default/objects/Account/fields/Allergens_if_any__c.field-meta.xml
<CustomField>
    <fullName>Allergens_if_any__c</fullName>
    <description>This is for GFD. ALLERGENS (use caps lock)
List any known Food Allergens</description>
    <inlineHelpText>List any known Food Allergens</inlineHelpText>
    <label>ALLERGENS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>