force-app/main/default/objects/Account/fields/Any_specific_interests_hobbies__c.field-meta.xml
<CustomField>
    <fullName>Any_specific_interests_hobbies__c</fullName>
    <label>Any specific interests/ hobbies</label>
    <type>TextArea</type>
</CustomField>