force-app/main/default/objects/Account/fields/B_S_Formal_Home_Support__c.field-meta.xml
<CustomField>
    <fullName>B_S_Formal_Home_Support__c</fullName>
    <label>(B&amp;S) Formal Home Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>