force-app/main/default/objects/Account/fields/B_S_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>B_S_Health_Status__c</fullName>
    <label>(B&amp;S)Health Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>