force-app/main/default/objects/Account/fields/B_S_Hobbies_Interests__c.field-meta.xml
<CustomField>
    <fullName>B_S_Hobbies_Interests__c</fullName>
    <label>(B&amp;S) Hobbies &amp; Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>