force-app/main/default/objects/Account/fields/B_S_Other_Practical_Support__c.field-meta.xml
<CustomField>
    <fullName>B_S_Other_Practical_Support__c</fullName>
    <label>(B&amp;S) Other Practical Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>