force-app/main/default/objects/Account/fields/B_S_Referral_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>B_S_Referral_Source_Date__c</fullName>
    <label>Referral Source Date</label>
    <type>Date</type>
</CustomField>