force-app/main/default/objects/Account/fields/B_S_Referral_Source_Email__c.field-meta.xml
<CustomField>
    <fullName>B_S_Referral_Source_Email__c</fullName>
    <label>BS Referral Source Email</label>
    <type>Email</type>
</CustomField>