force-app/main/default/objects/Account/fields/B_S_Referral_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>B_S_Referral_Source_Name__c</fullName>
    <label>Referral Source Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>