force-app/main/default/objects/Account/fields/B_S_Referral_Source_surname__c.field-meta.xml
<CustomField>
    <fullName>B_S_Referral_Source_surname__c</fullName>
    <label>Referral Source surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>