force-app/main/default/objects/Account/fields/B_S_Referral_Source_Telephone__c.field-meta.xml
<CustomField>
    <fullName>B_S_Referral_Source_Telephone__c</fullName>
    <label>Referral Source Telephone</label>
    <type>Phone</type>
</CustomField>