force-app/main/default/objects/Account/fields/Befriending_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Befriending_Agency_Name__c</fullName>
    <description>Please answer if you have chosen yes for the above field(Yes selected for Referred to another befriending agency?)</description>
    <inlineHelpText>Please answer if you have chosen yes for the above field</inlineHelpText>
    <label>Befriending Agency Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>