force-app/main/default/objects/Account/fields/BS_Any_specific_RISK_concerns__c.field-meta.xml
<CustomField>
    <fullName>BS_Any_specific_RISK_concerns__c</fullName>
    <description>This is for BS to address any specific RISK concerns (client or volunteer)</description>
    <label>Any specific RISK concerns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>