force-app/main/default/objects/Account/fields/BS_Assessment_complete_by__c.field-meta.xml
<CustomField>
    <fullName>BS_Assessment_complete_by__c</fullName>
    <description>This is for BS.This field captures assessment form completion (name).</description>
    <label>Assessment complete by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>