force-app/main/default/objects/Account/fields/BS_Assessment_complete_with__c.field-meta.xml
<CustomField>
    <fullName>BS_Assessment_complete_with__c</fullName>
    <description>This field is created for BS where we capture Assessment complete with values client or next of kin(NOK).</description>
    <label>Assessment complete with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Next of Kin(NOK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>