force-app/main/default/objects/Account/fields/BS_Assessment_date__c.field-meta.xml
<CustomField>
    <fullName>BS_Assessment_date__c</fullName>
    <description>This field is created for BS to capture date of assessment.</description>
    <label>Assessment date</label>
    <type>Date</type>
</CustomField>