force-app/main/default/objects/Account/fields/BS_Day_Time_that_suit_client__c.field-meta.xml
<CustomField>
    <fullName>BS_Day_Time_that_suit_client__c</fullName>
    <description>This is for MC(B&amp;S): days/ time options that suit client</description>
    <label>Day/Time that suit client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>