force-app/main/default/objects/Account/fields/BS_Describe_typical_day_for_client__c.field-meta.xml
<CustomField>
    <fullName>BS_Describe_typical_day_for_client__c</fullName>
    <description>This is for MC to capture typical day for client</description>
    <label>Describe typical day for client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>