force-app/main/default/objects/Account/fields/BS_Friends_and_Neighbours_Support__c.field-meta.xml
<CustomField>
    <fullName>BS_Friends_and_Neighbours_Support__c</fullName>
    <label>Friends and Neighbours Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>