force-app/main/default/objects/Account/fields/BS_MC_in_touch_with_volunteer__c.field-meta.xml
<CustomField>
    <fullName>BS_MC_in_touch_with_volunteer__c</fullName>
    <description>This is for BS. This is created so that Client knows MC will be in touch with volunteer</description>
    <label>MC in touch with volunteer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>