force-app/main/default/objects/Account/fields/BS_Notes_on_matching__c.field-meta.xml
<CustomField>
    <fullName>BS_Notes_on_matching__c</fullName>
    <description>This is created for BS.</description>
    <label>Notes on matching</label>
    <length>255</length>
    <type>Text</type>
</CustomField>