force-app/main/default/objects/Account/fields/BS_Pet_Details__c.field-meta.xml
<CustomField>
    <fullName>BS_Pet_Details__c</fullName>
    <description>The field is created for BS. If the Client has pets, capture the details of it.</description>
    <label>Pet Details</label>
    <type>TextArea</type>
</CustomField>