force-app/main/default/objects/Account/fields/BS_Source_of_referral__c.field-meta.xml
<CustomField>
    <fullName>BS_Source_of_referral__c</fullName>
    <label>Source of referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Health Nurse (PHN)</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>