force-app/main/default/objects/Account/fields/BSConfirmed_client_is_interested_in_serv__c.field-meta.xml
<CustomField>
    <fullName>BSConfirmed_client_is_interested_in_serv__c</fullName>
    <description>This field is created for BS to see if client is interested in service.</description>
    <label>Confirmed - client is interested in serv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>