force-app/main/default/objects/Account/fields/Can_client_contact_MC_via_landline__c.field-meta.xml
<CustomField>
    <fullName>Can_client_contact_MC_via_landline__c</fullName>
    <description>This field is created for BS so that Client has MC landline and knows they can contact us</description>
    <label>Can client contact MC via landline?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>