force-app/main/default/objects/Account/fields/Check_Update_Client_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Check_Update_Client_Contact_Details__c</fullName>
    <description>This is for BS to Check/ Update Client Contact Details.</description>
    <label>Check/ Update Client Contact Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>