force-app/main/default/objects/Account/fields/Check_Update_emergency_contacts_and_GP__c.field-meta.xml
<CustomField>
    <fullName>Check_Update_emergency_contacts_and_GP__c</fullName>
    <description>This is for BS to Check/ Update emergency contacts and GP</description>
    <label>Check/ Update emergency contacts and GP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>