force-app/main/default/objects/Account/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(BillingStreet)),      BillingStreet            + BR(), NULL) +
IF(NOT(ISBLANK(BillingCity)),        BillingCity              + BR(), NULL) +
IF(NOT(ISBLANK(BillingState)),       BillingState,                    NULL) +
IF(NOT(ISBLANK(BillingPostalCode)),  &quot;, &quot; + BillingPostalCode + BR(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Address</label>
    <type>Text</type>
</CustomField>