force-app/main/default/objects/Account/fields/Client_Age__c.field-meta.xml
<CustomField>
    <fullName>Client_Age__c</fullName>
    <formula>IF( NOT( ISBLANK( D_O_B__c) ) ,
  IF( DATE( 2000 , MONTH( D_O_B__c ) , DAY( D_O_B__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( D_O_B__c ),
     YEAR (Today()) - YEAR ( D_O_B__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>