force-app/main/default/objects/Account/fields/Client_Consent_to_GP__c.field-meta.xml
<CustomField>
    <fullName>Client_Consent_to_GP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Consent to GP</label>
    <type>Checkbox</type>
</CustomField>