force-app/main/default/objects/Account/fields/Client_Consented_to_Referral__c.field-meta.xml
<CustomField>
    <fullName>Client_Consented_to_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Consented to Referral</label>
    <type>Checkbox</type>
</CustomField>