force-app/main/default/objects/Account/fields/Client_Contact_Person_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Person_1_Email__c</fullName>
    <label>Client Contact Person 1 Email</label>
    <type>Email</type>
</CustomField>