force-app/main/default/objects/Account/fields/Client_Contact_Person_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Person_1_First_Name__c</fullName>
    <label>Client Contact Person 1 First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>