force-app/main/default/objects/Account/fields/Client_Contact_Person_1_Surname__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Person_1_Surname__c</fullName>
    <label>Client Contact Person 1 Surname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>