force-app/main/default/objects/Account/fields/Client_Contact_Person_2_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Person_2_Alternate_Phone__c</fullName>
    <label>Client Contact Person 2 Alternate Phone</label>
    <type>Phone</type>
</CustomField>