force-app/main/default/objects/Account/fields/Client_Contact_Person_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Person_2_First_Name__c</fullName>
    <label>Client Contact Person 2 First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>