force-app/main/default/objects/Account/fields/Client_Contact_Person_2_Surname__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Person_2_Surname__c</fullName>
    <label>Client Contact Person 2 Surname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>