force-app/main/default/objects/Account/fields/Client_EIR_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_EIR_Code__c</fullName>
    <label>Client EIR Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>