force-app/main/default/objects/Account/fields/Client_GP_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_GP_s_Phone__c</fullName>
    <label>Client GP&apos;s Phone</label>
    <type>Phone</type>
</CustomField>