force-app/main/default/objects/Account/fields/Client_has_a_spouse__c.field-meta.xml
<CustomField>
    <fullName>Client_has_a_spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client has a spouse</label>
    <type>Checkbox</type>
</CustomField>