force-app/main/default/objects/Account/fields/Client_has_children__c.field-meta.xml
<CustomField>
    <fullName>Client_has_children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client has children</label>
    <type>Checkbox</type>
</CustomField>