force-app/main/default/objects/Account/fields/Client_info_leaflet_provided__c.field-meta.xml
<CustomField>
    <fullName>Client_info_leaflet_provided__c</fullName>
    <label>Client info leaflet provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>