force-app/main/default/objects/Account/fields/Client_is_a_smoker__c.field-meta.xml
<CustomField>
    <fullName>Client_is_a_smoker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client is a smoker</label>
    <type>Checkbox</type>
</CustomField>