force-app/main/default/objects/Account/fields/Client_lives_alone__c.field-meta.xml
<CustomField>
    <fullName>Client_lives_alone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client lives alone</label>
    <type>Checkbox</type>
</CustomField>