force-app/main/default/objects/Account/fields/Client_s_Health_Centre_name_and_location__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Health_Centre_name_and_location__c</fullName>
    <label>Client&apos;s Health Centre name and location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>