force-app/main/default/objects/Account/fields/Client_s_HSE_Area__c.field-meta.xml
<CustomField>
    <fullName>Client_s_HSE_Area__c</fullName>
    <label>Client&apos;s HSE Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHO 6 Area 1 (Blackrock, Cabinteely Dalkey, Dun Laoghaire, Loughlinstown, Foxrock)</fullName>
            </value>
            <value>
                <fullName>CHO 6 Area 2 (Baggot Street, Balally, Ballinteer, Churchtown, Donnybrook, Dundrum, Leopardstown, Milltown, Ranelagh, Sallynoggin, Sandyford, Sandymount, Shankill, Stillorgan)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>