force-app/main/default/objects/Account/fields/Client_s_Public_Health_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Public_Health_Nurse__c</fullName>
    <label>Client&apos;s Public Health Nurse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>