force-app/main/default/objects/Account/fields/Client_Summary__c.field-meta.xml
<CustomField>
    <fullName>Client_Summary__c</fullName>
    <label>Client Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>