force-app/main/default/objects/Account/fields/Client_Surname__c.field-meta.xml
<CustomField>
    <fullName>Client_Surname__c</fullName>
    <label>Client Surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>