force-app/main/default/objects/Account/fields/Client_Type_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Type_of_contact__c</fullName>
    <description>This field is created to select multiple values from 
Main POC
NOK
GFD Invoicing
Emergency only</description>
    <label>Type of contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main POC</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>GFD Invoicing</fullName>
            </value>
            <value>
                <fullName>Emergency only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>