force-app/main/default/objects/Account/fields/ClientUniqueDetial__c.field-meta.xml
<CustomField>
    <fullName>ClientUniqueDetial__c</fullName>
    <formula>LOWER(Client_Surname__c) +  TEXT(D_O_B__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClientUniqueDetial</label>
    <type>Text</type>
</CustomField>