force-app/main/default/objects/Account/fields/Cognitive_Status__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Status__c</fullName>
    <label>Cognitive Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>