force-app/main/default/objects/Account/fields/Concerns_raised_by_client__c.field-meta.xml
<CustomField>
    <fullName>Concerns_raised_by_client__c</fullName>
    <description>This field is for MC to check if concerns/ queries raised by client.</description>
    <label>Concerns raised by client?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>