force-app/main/default/objects/Account/fields/Consent_given_by__c.field-meta.xml
<CustomField>
    <fullName>Consent_given_by__c</fullName>
    <label>Consent given by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Next of Kin (nok)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>