force-app/main/default/objects/Account/fields/Consent_to_share_info_with_Airfield__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_share_info_with_Airfield__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is created for GFD. Consent to share info with Airfield (invoicing)</description>
    <label>Consent to share info with Airfield</label>
    <type>Checkbox</type>
</CustomField>