force-app/main/default/objects/Account/fields/Consent_to_share_into_with_HSE__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_share_into_with_HSE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is created for GFD.Consent to share into with HSE</description>
    <label>Consent to share into with HSE</label>
    <type>Checkbox</type>
</CustomField>