force-app/main/default/objects/Account/fields/Consent_to_share_with_Making_Connections__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_share_with_Making_Connections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the client/NOK consented to information being shared with Making Connections?</description>
    <label>Consent to share with Making Connections</label>
    <type>Checkbox</type>
</CustomField>