force-app/main/default/objects/Account/fields/Conset_to_participate_in_Airfield_resear__c.field-meta.xml
<CustomField>
    <fullName>Conset_to_participate_in_Airfield_resear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is created for GFD. Conset to participate in Airfield research</description>
    <label>Conset to participate in Airfield resear</label>
    <type>Checkbox</type>
</CustomField>