force-app/main/default/objects/Account/fields/Contact2_Type_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Type_of_contact__c</fullName>
    <description>This is a multi picklist field created for client contact person 2.</description>
    <label>Type of contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main POC</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>GFD Invoicing</fullName>
            </value>
            <value>
                <fullName>Emergency only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>