force-app/main/default/objects/Account/fields/ContactPerson2_Newsletter_Consent__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson2_Newsletter_Consent__c</fullName>
    <description>This field is created for consent of newsletter for 2nd contact person.</description>
    <label>Newsletter Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>