force-app/main/default/objects/Account/fields/D_O_B__c.field-meta.xml
<CustomField>
    <fullName>D_O_B__c</fullName>
    <label>D.O.B.</label>
    <type>Date</type>
</CustomField>