force-app/main/default/objects/Account/fields/Details_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Support__c</fullName>
    <description>If yes, give days/ times for each support</description>
    <inlineHelpText>If yes, give days/ times for each support</inlineHelpText>
    <label>Details of Support</label>
    <type>TextArea</type>
</CustomField>