force-app/main/default/objects/Account/fields/Does_client_have_vol_from_other_agency__c.field-meta.xml
<CustomField>
    <fullName>Does_client_have_vol_from_other_agency__c</fullName>
    <label>Does client have vol. from other agency?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>