force-app/main/default/objects/Account/fields/Family_Visit__c.field-meta.xml
<CustomField>
    <fullName>Family_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Visit</label>
    <type>Checkbox</type>
</CustomField>