force-app/main/default/objects/Account/fields/Final_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Comments__c</fullName>
    <label>Final Comments</label>
    <type>TextArea</type>
</CustomField>