force-app/main/default/objects/Account/fields/Friends_Neighbours_Visit__c.field-meta.xml
<CustomField>
    <fullName>Friends_Neighbours_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friends/ Neighbours Visit</label>
    <type>Checkbox</type>
</CustomField>