force-app/main/default/objects/Account/fields/Further_info_Covd_19_Supports__c.field-meta.xml
<CustomField>
    <fullName>Further_info_Covd_19_Supports__c</fullName>
    <description>*If &apos;yes&apos; for Covid-19 Emergency Supports please specify reason</description>
    <label>Further info (Covd-19 Supports)</label>
    <type>TextArea</type>
</CustomField>