force-app/main/default/objects/Account/fields/GFD_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>GFD_Action_Required__c</fullName>
    <description>This is for GFD created at operations stage to know if action is required or not?</description>
    <label>Action Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>