force-app/main/default/objects/Account/fields/GFD_Assessment_complete_by__c.field-meta.xml
<CustomField>
    <fullName>GFD_Assessment_complete_by__c</fullName>
    <description>This is for MC to capture GFD  Assessment complete by(name).</description>
    <label>Assessment complete by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>