force-app/main/default/objects/Account/fields/GFD_Assessment_complete_with__c.field-meta.xml
<CustomField>
    <fullName>GFD_Assessment_complete_with__c</fullName>
    <description>This is created to know who has completed the assessment for GFD</description>
    <label>Assessment complete with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Next of Kin(NOK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>