force-app/main/default/objects/Account/fields/GFD_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>GFD_Assessment_Date__c</fullName>
    <description>This field is created to capture GFD assessment date</description>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>