force-app/main/default/objects/Account/fields/GFD_Can_client_use_microwave_oven__c.field-meta.xml
<CustomField>
    <fullName>GFD_Can_client_use_microwave_oven__c</fullName>
    <description>This is for GFD to check if Client has/ can use microwave or oven?</description>
    <label>Can client use microwave/oven?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>