force-app/main/default/objects/Account/fields/GFD_Cancellation_Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>GFD_Cancellation_Notice_Received__c</fullName>
    <label>Cancellation Notice Received</label>
    <type>Date</type>
</CustomField>