force-app/main/default/objects/Account/fields/GFD_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>GFD_Cancellation_Reason__c</fullName>
    <description>This is for GFD at operation stage to capture cancellation reason.</description>
    <label>Cancellation - Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>