force-app/main/default/objects/Account/fields/GFD_Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>GFD_Cancellation_Type__c</fullName>
    <description>This is for GFD where the type of cancellation is specified.</description>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>