force-app/main/default/objects/Account/fields/GFD_Changes_details__c.field-meta.xml
<CustomField>
    <fullName>GFD_Changes_details__c</fullName>
    <description>This is for GFD to capture change in details.</description>
    <label>Changes (details)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>