force-app/main/default/objects/Account/fields/GFD_Client_Address__c.field-meta.xml
<CustomField>
    <fullName>GFD_Client_Address__c</fullName>
    <description>This is for GFD assessment to capture Client Address (simple version for drivers)</description>
    <label>Client Address</label>
    <type>TextArea</type>
</CustomField>