force-app/main/default/objects/Account/fields/GFD_Client_Area__c.field-meta.xml
<CustomField>
    <fullName>GFD_Client_Area__c</fullName>
    <description>This is for GFD to know the Client Area (for route planning)</description>
    <label>Client Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>