force-app/main/default/objects/Account/fields/GFD_Client_eligible_for_the_service__c.field-meta.xml
<CustomField>
    <fullName>GFD_Client_eligible_for_the_service__c</fullName>
    <description>This is for GFD to know Client eligible for the service</description>
    <label>Client eligible for the service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>