force-app/main/default/objects/Account/fields/GFD_Client_informed_service_is_temporary__c.field-meta.xml
<CustomField>
    <fullName>GFD_Client_informed_service_is_temporary__c</fullName>
    <description>This is for GFD to know if Client/nok informed service is temporary</description>
    <label>Client/NOK informed service is temporary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>