force-app/main/default/objects/Account/fields/GFD_Client_NOK_understands_invoicing__c.field-meta.xml
<CustomField>
    <fullName>GFD_Client_NOK_understands_invoicing__c</fullName>
    <description>This is for GFD to know if Client/nok understands how invoicing works</description>
    <label>Client/NOK understands invoicing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>