force-app/main/default/objects/Account/fields/GFD_Confirmation_to_client_nok__c.field-meta.xml
<CustomField>
    <fullName>GFD_Confirmation_to_client_nok__c</fullName>
    <description>This is for GFD, Admin Checklist/ Followup for Confirmation ent to client/ nok?</description>
    <label>Confirmation to client/ nok?</label>
    <type>Date</type>
</CustomField>